--- a/sass/_style.sass
+++ b/sass/_style.sass
@@ -178,10 +178,6 @@ div[data-picture]
         padding: 10px
         min-width: 15em
 
-    .collapse a[href]
-        position: absolute
-        left: -15px
-
 /* Desktop-only styles */
 @media screen and (min-width: $desktop-min)
     a[href]
